# SimpleOS

./: CHANGELOG.md  CURRENT_STATUS.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  examine.sh  linker.ld
.cargo/: config.toml
.zed/: settings.json
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
docs/: COLORS.md  COMMANDS.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SETUP.md
future/: README.md
future/advanced_bootloader/first_stage/asm/: boot.s
future/advanced_bootloader/first_stage/src/: disk.rs
future/drivers/vga_display/: mod.rs
future/shared_libs/common/: Cargo.toml
future/shared_libs/common/src/: address_types.rs  constants.rs  lib.rs
future/shared_libs/common/src/enums/: bios_interrupts.rs  general.rs  mod.rs  vga.rs
future/shared_libs/common/src/error/: mod.rs  paging.rs
future/shared_libs/cpu_utils/: Cargo.toml
future/shared_libs/cpu_utils/src/: lib.rs
future/shared_libs/cpu_utils/src/structures/: global_descriptor_table.rs  mod.rs
future/shared_libs/cpu_utils/src/structures/paging/: init.rs  mod.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/src/: kernel.s  main.rs
kernel/src/drivers/vga_display/: color_code.rs  screen_char.rs  writer.rs
kernel/stages/first_stage/src/: main.rs
shared/common/src/: address_types.rs
src/: build.rs  main.rs
